--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-flatlist-slider": "^1.0.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-media-query": "^1.0.7",
     "react-native-safe-area-context": "3.2.0",
