--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "python scripts/fix.py"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -18,11 +19,11 @@
     "react": "16.13.1",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-flatlist-slider": "^1.0.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-media-query": "^1.0.7",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "^0.17.1",
     "tailwind-rn": "^3.0.1"
   },
