Added react apollo

--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "postinstall": "python scripts/fix.py"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "expo": "~42.0.1",
     "expo-linking": "~2.3.1",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animation-library": "0.0.8",
